finished the next 2 sections of the landing page

--- a/index.html
+++ b/index.html
@@ -56,35 +56,86 @@
             </div>
         </section>
         <section class="section section--productDesc">
-            <header class="header header--productDesc">
-                <h1>Designed for the future</h1>
-            </header>
-            <section class="section section--technical">
-                <article class="article article--technical">
-                    <header class="header header-technical">
-                        <h1>Introducing an Extensible Editor</h1>
-                    </header>
-                    <p>
-                        Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating
-                        content. The editor supports management of multiple blogs and allows easy manipulation of embeds
-                        such as images, videos, and Markdown. Extensibility with plugins and themes provide easy ways to
-                        add
-                        functionality or change the looks of a blog.
+            <div class="block block--sectionProductDescLeft">
+                <header class="header header--productDesc">
+                    <h1 class="h1 h1--productDesc">Designed for the future</h1>
+                </header>
+                <section class="section section--technical">
+                    <article class="article article--technical">
+                        <header class="header header-technical">
+                            <h1>Introducing an extensible editor</h1>
+                        </header>
+                        <p class="p p--technical">
+                            Blogr features an exceedingly intuitive interface which lets you focus on one thing:
+                            creating
+                            content. The editor supports management of multiple blogs and allows easy manipulation of
+                            embeds
+                            such as images, videos, and Markdown. Extensibility with plugins and themes provide easy
+                            ways to
+                            add
+                            functionality or change the looks of a blog.
+                        </p>
+                    </article>
+                    <article class="article article--technical">
+                        <header class="header header-technical">
+                            <h1>Robost content management</h1>
+                        </header>
+                        <p class="p p--technical">
+                            Flexible content management enables users to easily move through posts. Increase the
+                            usability
+                            of
+                            your blog by adding customized categories, sections, format, or flow. With this
+                            functionality,
+                            you’re in full control.
+                        </p>
+                    </article>
+            </div>
+            <img class="img img--productDesc" src="./images/illustration-editor-desktop.svg">
+        </section>
+        <section class="section section--infrastructure">
+            <div class="block block--sectionWrapper">
+                <img class="img img--infrastructure" src="./images/illustration-phones.svg">
+                <article class="article article--infrastructure">
+                    <heading class="heading heading--infrastructure">
+                        <h1 class="h1 h1--infrastructure">State of the Art Infrastucture</h1>
+                    </heading>
+                    <p class="p p--infrastructure">
+                        With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast
+                        connectivity. This ensures your site will load instantly, no matter where your readers are,
+                        keeping your site competitive.
+                    </p>
+                </article>
+            </div>
+        </section>
+        </section>
+        <section class="section section--technicalCont">
+            <img class="img img--technicalCont" src="./images/illustration-laptop-desktop.svg">
+            <div class="block block--rightTechnicalCont">
+                <article class="article article--technicalCont">
+                    <heading class="heading heading--technicalCont">
+                        <h1 class="h1 h1--technicalCont">Free, open, simple</h1>
+                    </heading>
+                    <p class="p p--technicalCont">
+                        Blogr is a free and open source application backed by a large community of helpful developers.
+                        It
+                        supports features such as code syntax highlighting, RSS feeds, social media integration,
+                        third-party
+                        commenting tools, and works seamlessly with Google Analytics. The architecture is clean and is
+                        relatively easy to learn.
                     </p>
                 </article>
                 <article>
-                    <header class="header header-technical">
-                        <h1>Robost Content Management</h1>
-                    </header>
+                    <heading>
+                        <h1>Powerful tooling</h1>
+                    </heading>
                     <p>
-                        Flexible content management enables users to easily move through posts. Increase the usability
-                        of
-                        your blog by adding customized categories, sections, format, or flow. With this functionality,
-                        you’re in full control.
+                        Batteries included. We built a simple and straightforward CLI tool that makes customization and
+                        deployment a breeze, but capable of producing even the most complicated sites.
                     </p>
                 </article>
-                <img src="./images/illustration-editor-desktop.svg">
-            </section>
+            </div>
+        </section>
+
         </section>
 
     </main>
