--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <section class="section section--technical">
                     <article class="article article--technical">
                         <header class="header header-technical">
-                            <h1>Introducing an extensible editor</h1>
+                            <h1 class="h1 h1--technical">Introducing an extensible editor</h1>
                         </header>
                         <p class="p p--technical">
                             Blogr features an exceedingly intuitive interface which lets you focus on one thing:
@@ -78,7 +78,7 @@
                     </article>
                     <article class="article article--technical">
                         <header class="header header-technical">
-                            <h1>Robost content management</h1>
+                            <h1 class="h1 h1--technical">Robost content management</h1>
                         </header>
                         <p class="p p--technical">
                             Flexible content management enables users to easily move through posts. Increase the
@@ -94,7 +94,8 @@
         </section>
         <section class="section section--infrastructure">
             <div class="block block--sectionWrapper">
-                <img class="img img--infrastructure" src="./images/illustration-phones.svg">
+                <div class="block block--infrastructureWrapper"><img class="img img--infrastructure"
+                        src="./images/illustration-phones.svg"></div>
                 <article class="article article--infrastructure">
                     <heading class="heading heading--infrastructure">
                         <h1 class="h1 h1--infrastructure">State of the Art Infrastucture</h1>
@@ -109,7 +110,8 @@
         </section>
         </section>
         <section class="section section--technicalCont">
-            <img class="img img--technicalCont" src="./images/illustration-laptop-desktop.svg">
+            <div class="block block--imgWrapper"><img class="img img--technicalCont"
+                    src="./images/illustration-laptop-desktop.svg"></div>
             <div class="block block--rightTechnicalCont">
                 <article class="article article--technicalCont">
                     <heading class="heading heading--technicalCont">
