added support for keyboard users, added addtional menu options (need more work)

--- a/index.html
+++ b/index.html
@@ -26,22 +26,47 @@
                     </svg>
                     <nav class="nav">
                         <ul class="ul ul--leftNav">
-                            <li class="li li--leftNav">Product <svg class="svg svg--arrow"
+                            <li tabindex="1" class="li li--leftNav"> Product<svg class="svg svg--arrow"
                                     xmlns="http://www.w3.org/2000/svg" width="10" height="7">
                                     <path fill="none" stroke="#FFF" stroke-width="2" opacity=".75" d="M1 1l4 4 4-4" />
                                 </svg></li>
-                            <li class="li li--leftNav">Company <svg class="svg svg--arrow"
+                            <li class="li li--leftNav">
+                                <ul class="ul--hidden">
+                                    <li class="li--hidden"><a class="a a--hidden" href="">Overview</a></li>
+                                    <li class="li--hidden"><a class="a a--hidden" href="">Pricing</a></li>
+                                    <li class="li--hidden"><a class="a a--hidden" href="">Marketplace</a></li>
+                                    <li class=" li--hidden"><a class="a a--hidden" href="">Features</a></li>
+                                    <li class="li--hidden"><a class="a a--hidden" href="">Integration</a></li>
+                                </ul>
+                            </li>
+                            <li tabindex="2" class="li li--leftNav">Company <svg class="svg svg--arrow"
                                     xmlns="http://www.w3.org/2000/svg" width="10" height="7">
                                     <path fill="none" stroke="#FFF" stroke-width="2" opacity=".75" d="M1 1l4 4 4-4" />
                                 </svg></li>
-                            <li class="li li--leftNav">Connect <svg class="svg svg--arrow"
+                            <li class="li li--leftNav">
+                                <ul class="ul--hidden">
+                                    <li class="li--hidden"><a class="a a--hidden" href="">About</a></li>
+                                    <li class="li--hidden"><a class="a a--hidden" href="">Team</a></li>
+                                    <li class=" li--hidden"><a class="a a--hidden" href="">Blog</a></li>
+                                    <li class=" li--hidden"><a class="a a--hidden" href="">Careers</a></li>
+                                </ul>
+                            </li>
+                            <li tabindex="3" class="li li--leftNav">Connect <svg class="svg svg--arrow"
                                     xmlns="http://www.w3.org/2000/svg" width="10" height="7">
                                     <path fill="none" stroke="#FFF" stroke-width="2" opacity=".75" d="M1 1l4 4 4-4" />
                                 </svg></li>
+                            <li class="li li--leftNav">
+                                <ul class="ul--hidden">
+                                    <li class="li--hidden"><a class="a a--hidden" href="">Contact</a></li>
+                                    <li class="li--hidden"><a class="a a--hidden" href="">Newsletter</a></li>
+                                    <li class="li--hidden"><a class="a a--hidden" href="">Linkedin</a></li>
+                                </ul>
+                            </li>
                         </ul>
                         <ul class="ul ul--rightNav">
                             <li class="li li--rightNav"><a class="a a--rightNav" href="">Login</a></li>
-                            <li class="li li--rightNav"><a class="a a--rightNav whiteFilled" href="">Sign Up</a></li>
+                            <li class="li li--rightNav"><a class="a a--rightNav whiteFilled" href="">Sign
+                                    Up</a></li>
                         </ul>
                     </nav>
                 </header>
@@ -49,8 +74,8 @@
                     <h1 class="h1 h1--hero">A modern publishing platform</h1>
                     <p class="p p--hero">Grow your audience and build your online brand</p>
                     <div class="block block--hero">
-                        <a class="a a--hero whiteFilled">Start for Free</a>
-                        <a class="a a--hero whiteOutline">Learn More</a>
+                        <a tabindex="6" class="a a--hero whiteFilled">Start for Free</a>
+                        <a tabindex="7" class="a a--hero whiteOutline">Learn More</a>
                     </div>
                 </section>
             </div>
