added CSS animations

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                                     xmlns="http://www.w3.org/2000/svg" width="10" height="7">
                                     <path fill="none" stroke="#FFF" stroke-width="2" opacity=".75" d="M1 1l4 4 4-4" />
                                 </svg></li>
-                            <li class="li li--leftNav">
+                            <li class="li li--leftNav li--hidden--main">
                                 <ul class="ul--hidden">
                                     <li class="li--hidden"><a class="a a--hidden" href="">Overview</a></li>
                                     <li class="li--hidden"><a class="a a--hidden" href="">Pricing</a></li>
@@ -43,7 +43,7 @@
                                     xmlns="http://www.w3.org/2000/svg" width="10" height="7">
                                     <path fill="none" stroke="#FFF" stroke-width="2" opacity=".75" d="M1 1l4 4 4-4" />
                                 </svg></li>
-                            <li class="li li--leftNav">
+                            <li class="li li--leftNav li--hidden--main">
                                 <ul class="ul--hidden">
                                     <li class="li--hidden"><a class="a a--hidden" href="">About</a></li>
                                     <li class="li--hidden"><a class="a a--hidden" href="">Team</a></li>
@@ -55,7 +55,7 @@
                                     xmlns="http://www.w3.org/2000/svg" width="10" height="7">
                                     <path fill="none" stroke="#FFF" stroke-width="2" opacity=".75" d="M1 1l4 4 4-4" />
                                 </svg></li>
-                            <li class="li li--leftNav">
+                            <li class="li li--leftNav li--hidden--main">
                                 <ul class="ul--hidden">
                                     <li class="li--hidden"><a class="a a--hidden" href="">Contact</a></li>
                                     <li class="li--hidden"><a class="a a--hidden" href="">Newsletter</a></li>
@@ -74,8 +74,8 @@
                     <h1 class="h1 h1--hero">A modern publishing platform</h1>
                     <p class="p p--hero">Grow your audience and build your online brand</p>
                     <div class="block block--hero">
-                        <a tabindex="6" class="a a--hero whiteFilled">Start for Free</a>
-                        <a tabindex="7" class="a a--hero whiteOutline">Learn More</a>
+                        <a tabindex="0" class="a a--hero whiteFilled">Start for Free</a>
+                        <a tabindex="0" class="a a--hero whiteOutline">Learn More</a>
                     </div>
                 </section>
             </div>
