--- a/index.html
+++ b/index.html
@@ -27,73 +27,65 @@
                     </svg>
                     <nav class="nav">
                         <ul class="ul ul--leftNav">
-                            <li aria-expanded="false" tabindex="1" id="productMenuTitle"
-                                class="li li--leftNav li--productMenu li--hasMenu"><a tabindex="-1"
-                                    class="a a--ul--leftNav" href="">
-                                    Product</a><svg class="svg svg--arrow" xmlns="http://www.w3.org/2000/svg" width="10"
-                                    height="7">
+                            <li id="productMenuTitle" class="li li--leftNav li--productMenu li--hasMenu">
+                                <a aria-expanded="false" tabindex="1" class="a a--ul--leftNav" href="">
+                                    Product</a>
+                                <svg id="first--arrow" class="svg svg--arrow" xmlns="http://www.w3.org/2000/svg"
+                                    width="10" height="7">
                                     <path fill="none" stroke="#FFF" stroke-width="2" opacity=".75" d="M1 1l4 4 4-4" />
-                                </svg></li>
+                                </svg>
+                            </li>
                             <li class="li li--leftNav li--hidden--main">
                                 <ul id="productMenu" class="ul--hidden">
-                                    <li tabindex="2" class="li--hidden"><a tabindex="-1" class="a a--hidden"
-                                            href="">Overview</a></li>
-                                    <li tabindex="3" class="li--hidden"><a tabindex="-1" class="a a--hidden"
-                                            href="">Pricing</a></li>
-                                    <li tabindex="4" class="li--hidden"><a tabindex="-1" class="a a--hidden"
-                                            href="">Marketplace</a>
+                                    <li class="li--hidden"><a tabindex="2" class="a a--hidden" href="">Overview</a></li>
+                                    <li class="li--hidden"><a tabindex="3" class="a a--hidden" href="">Pricing</a></li>
+                                    <li class="li--hidden"><a tabindex="4" class="a a--hidden" href="">Marketplace</a>
                                     </li>
-                                    <li tabindex="5" class="li--hidden"><a tabindex="-1" class="a a--hidden"
-                                            href="">Features</a>
+                                    <li class="li--hidden"><a tabindex="5" class="a a--hidden" href="">Features</a>
                                     </li>
-                                    <li tabindex="6" id="last--li--hidden" class="li--hidden"><a class="a a--hidden"
-                                            tabindex="-1" href="">Integration</a>
+                                    <li id="last--li--hidden" class="li--hidden"><a class="a a--hidden" tabindex="6"
+                                            href="">Integration</a>
                                     </li>
                                 </ul>
                             </li>
-                            <li aria-expanded="false" id="companyMenu" tabindex="7"
-                                class="li li--leftNav li--companyMenu li--hasMenu"><a tabindex="-1"
-                                    class="a a--ul--leftNav" href="">Company</a> <svg class="svg svg--arrow"
-                                    xmlns="http://www.w3.org/2000/svg" width="10" height="7">
+                            <li id="companyMenu" class="li li--leftNav li--companyMenu li--hasMenu">
+                                <a aria-expanded="false" tabindex="7" class="a a--ul--leftNav" href="">Company</a>
+                                <svg id="second--arrow" class="svg svg--arrow" xmlns="http://www.w3.org/2000/svg"
+                                    width="10" height="7">
                                     <path fill="none" stroke="#FFF" stroke-width="2" opacity=".75" d="M1 1l4 4 4-4" />
-                                </svg></li>
+                                </svg>
+                            </li>
                             <li aria-expanded="false" class="li li--leftNav li--hidden--main ">
                                 <ul class="ul--hidden">
-                                    <li tabindex="8" class="li--hidden"><a tabindex="-1" class="a a--hidden"
-                                            href="">About</a></li>
-                                    <li tabindex="9" class="li--hidden"><a tabindex="-1" class="a a--hidden"
-                                            href="">Team</a></li>
-                                    <li tabindex="10" class="li--hidden"><a tabindex="-1" class="a a--hidden"
-                                            href="">Blog</a></li>
-                                    <li tabindex="11" id="last--li--hidden" class="li--hidden"><a class="a a--hidden"
-                                            tabindex="-1" href="">Careers</a>
+                                    <li class="li--hidden"><a tabindex="8" class="a a--hidden" href="">About</a></li>
+                                    <li class="li--hidden"><a tabindex="9" class="a a--hidden" href="">Team</a></li>
+                                    <li class="li--hidden"><a tabindex="10" class="a a--hidden" href="">Blog</a></li>
+                                    <li id="last--li--hidden" class="li--hidden"><a class="a a--hidden" tabindex="11"
+                                            href="">Careers</a>
                                     </li>
                                 </ul>
                             </li>
-                            <li aria-expanded="false" id="connectMenu" tabindex="12"
-                                class="li li--leftNav li--hasMenu li--connectMenu"><a tabindex="-1"
-                                    class="a a--ul--leftNav" href="">Connect</a> <svg class="svg svg--arrow"
-                                    xmlns="http://www.w3.org/2000/svg" width="10" height="7">
+                            <li id="connectMenu" class="li li--leftNav li--hasMenu li--connectMenu">
+                                <a aria-expanded="false" tabindex="12" class="a a--ul--leftNav" href="">Connect</a>
+                                <svg id="third--arrow" class="svg svg--arrow" xmlns="http://www.w3.org/2000/svg"
+                                    width="10" height="7">
                                     <path fill="none" stroke="#FFF" stroke-width="2" opacity=".75" d="M1 1l4 4 4-4" />
-                                </svg></li>
+                                </svg>
+                            </li>
                             <li class="li li--leftNav li--hidden--main">
                                 <ul class="ul--hidden">
-                                    <li tabindex="13" class="li--hidden"><a tabindex="-1" class="a a--hidden"
-                                            href="">Contact</a></li>
-                                    <li tabindex="14" class="li--hidden"><a tabindex="-1" class="a a--hidden"
-                                            href="">Newsletter</a>
+                                    <li class="li--hidden"><a tabindex="13" class="a a--hidden" href="">Contact</a></li>
+                                    <li class="li--hidden"><a tabindex="14" class="a a--hidden" href="">Newsletter</a>
                                     </li>
-                                    <li tabindex="15" id="last--li--hidden" class="li--hidden"><a class="a a--hidden"
+                                    <li id="last--li--hidden" class="li--hidden"><a tabindex="15" class="a a--hidden"
                                             href="">Linkedin</a>
                                     </li>
                                 </ul>
                             </li>
                         </ul>
                         <ul aria-expanded="false" class="ul ul--rightNav">
-                            <li tabindex="16" class="li li--rightNav"><a tabindex="-1" class="a a--rightNav"
-                                    href="">Login</a></li>
-                            <li tabindex="17" class="li li--rightNav"><a tabindex="-1" class="a a--rightNav whiteFilled"
-                                    href="">Sign
+                            <li class="li li--rightNav"><a tabindex="16" class="a a--rightNav" href="">Login</a></li>
+                            <li class="li li--rightNav"><a tabindex="17" class="a a--rightNav whiteFilled" href="">Sign
                                     Up</a></li>
                         </ul>
                     </nav>
@@ -201,16 +193,14 @@
                     <h1 class="h1 h1--footer">Product</h1>
                 </heading>
                 <ul class="ul ul--footer">
-                    <li tabindex="20" class="li li--footer"><a tabindex="-1" class="a a--footer" href="">Overview</a>
+                    <li class="li li--footer"><a tabindex="20" class="a a--footer" href="">Overview</a>
                     </li>
-                    <li tabindex="21" class="li li--footer"><a tabindex="-1" class="a a--footer" href="">Pricing</a>
+                    <li class="li li--footer"><a tabindex="21" class="a a--footer" href="">Pricing</a>
                     </li>
-                    <li tabindex="22" class=" li li--footer"><a tabindex="-1" class="a a--footer"
-                            href="">Marketplace</a></li>
-                    <li tabindex="23" class=" li li--footer"><a tabindex="-1" class="a a--footer" href="">Features</a>
+                    <li class=" li li--footer"><a tabindex="22" class="a a--footer" href="">Marketplace</a></li>
+                    <li class=" li li--footer"><a tabindex="23" class="a a--footer" href="">Features</a>
                     </li>
-                    <li tabindex="24" class=" li li--footer"><a tabindex="-1" class="a a--footer"
-                            href="">Integration</a></li>
+                    <li class=" li li--footer"><a tabindex="24" class="a a--footer" href="">Integration</a></li>
                 </ul>
             </section>
             <section class="section section--footer">
@@ -218,10 +208,10 @@
                     <h1 class="h1 h1--footer">Company</h1>
                 </heading>
                 <ul class="ul ul--footer">
-                    <li tabindex="25" class="li li--footer"><a tabindex="-1" class="a a--footer" href="">About</a></li>
-                    <li tabindex="26" class="li li--footer"><a tabindex="-1" class="a a--footer" href="">Team</a></li>
-                    <li tabindex="27" class=" li li--footer"><a tabindex="-1" class="a a--footer" href="">Blog</a></li>
-                    <li tabindex="28" class=" li li--footer"><a tabindex="-1" class="a a--footer" href="">Careers</a>
+                    <li class="li li--footer"><a tabindex="25" class="a a--footer" href="">About</a></li>
+                    <li class="li li--footer"><a tabindex="26" class="a a--footer" href="">Team</a></li>
+                    <li class=" li li--footer"><a tabindex="27" class="a a--footer" href="">Blog</a></li>
+                    <li class=" li li--footer"><a tabindex="28" class="a a--footer" href="">Careers</a>
                     </li>
                 </ul>
             </section>
@@ -230,11 +220,11 @@
                     <h1 class="h1 h1--footer">Connect</h1>
                 </heading>
                 <ul class="ul ul--footer">
-                    <li tabindex="29" class="li li--footer"><a tabindex="-1" class="a a--footer" href="">Contact</a>
+                    <li class="li li--footer"><a tabindex="29" class="a a--footer" href="">Contact</a>
                     </li>
-                    <li tabindex="30" class="li li--footer"><a tabindex="-1" class="a a--footer" href="">Newsletter</a>
+                    <li class="li li--footer"><a tabindex="30" class="a a--footer" href="">Newsletter</a>
                     </li>
-                    <li tabindex="31" class=" li li--footer"><a tabindex="-1" class="a a--footer" href="">Linkedin</a>
+                    <li class=" li li--footer"><a tabindex="31" class="a a--footer" href="">Linkedin</a>
                     </li>
                 </ul>
             </section>
